:heavy_plus_sign: :construction: Add payments, soft deletes, migrations and repository interface
